[package]
name = "pallet-energy-fee"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-asset-rate = { workspace = true }
pallet-balances = { workspace = true }
pallet-evm = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-sudo = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
sp-arithmetic = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

[dev-dependencies]
pallet-assets = { workspace = true, default-features = true }
pallet-ethereum = { workspace = true }
pallet-evm-chain-id = { workspace = true }
pallet-reputation = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-nfts = { workspace = true }
pallet-staking-reward-curve = { workspace = true }
substrate-test-utils = { workspace = true }
frame-benchmarking = { workspace = true }
rand_chacha = { workspace = true }
ethereum-types = { workspace = true }
fp-account = { workspace = true }
pallet-base-fee = { workspace = true }

[features]
default = ["std"]
std = [
    "ethereum-types/std",
    "fp-account/std",
    "frame-benchmarking/std",
    "frame-support/std",
    "frame-system/std",
    "ethereum-types/std",
    "pallet-asset-rate/std",
    "pallet-balances/std",
    "pallet-ethereum/std",
    "pallet-evm/std",
    "pallet-base-fee/std",
    "pallet-evm-chain-id/std",
    "pallet-reputation/std",
    "parity-scale-codec/std",
    "pallet-nfts/std",
    "pallet-sudo/std",
    "pallet-transaction-payment/std",
    "scale-info/std",
    "sp-arithmetic/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "pallet-assets/runtime-benchmarks",
    "pallet-ethereum/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
