[package]
name = "pallet-nac-managing"
version = "0.1.0"
authors = ["Innowise FinTech Team"]
edition = "2021"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = { workspace = true }

frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-balances = { workspace = true }
pallet-claiming = { workspace = true }
pallet-energy-fee = { workspace = true }
pallet-nfts = { workspace = true }
pallet-reputation = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
sp-arithmetic = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-staking = { workspace = true }
sp-std = { workspace = true }

[dev-dependencies]
frame-benchmarking = { workspace = true }
orml-traits = { workspace = true }
pallet-assets = { workspace = true }
pallet-authorship = { workspace = true }
pallet-balances = { workspace = true }
pallet-claiming = { workspace = true }
pallet-energy-generation = { workspace = true }
pallet-privileges = { workspace = true }
pallet-session = { workspace = true }
pallet-staking-reward-curve = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-vesting = { workspace = true }
rand_chacha = { workspace = true }
sp-tracing = { workspace = true }
substrate-test-utils = { workspace = true }

[features]
default = ["std"]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "pallet-nfts/runtime-benchmarks",
]
std = [
    "frame-benchmarking/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-assets/std",
    "pallet-authorship/std",
    "pallet-balances/std",
    "pallet-claiming/std",
    "pallet-energy-generation/std",
    "pallet-privileges/std",
    "pallet-energy-fee/std",
    "pallet-reputation/std",
    "pallet-timestamp/std",
    "pallet-vesting/std",
    "pallet-nfts/std",
    "pallet-session/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "sp-arithmetic/std",
    "sp-runtime/std",
    "sp-staking/std",
    "sp-std/std",
]
try-runtime = [ "frame-support/try-runtime" ]
