[package]
name = "pallet-privileges"
version = "0.1.0"
authors = ["Innowise FinTech Team"]
edition = "2021"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]


[dependencies]
chrono = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-nac-managing = { workspace = true }
pallet-energy-generation = { workspace = true }
pallet-nfts = { workspace = true }
pallet-timestamp = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
sp-arithmetic = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-staking = { workspace = true }
sp-std = { workspace = true }

[dev-dependencies]
frame-benchmarking = { workspace = true }
parity-scale-codec = { workspace = true }
pallet-balances = { workspace = true }
pallet-staking-reward-curve = { workspace = true }
pallet-timestamp = { workspace = true }
rand_chacha = { workspace = true }
sp-tracing = { workspace = true }
substrate-test-utils = { workspace = true }

[features]
default = ["std"]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
std = [
    "chrono/std",
    "frame-benchmarking/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-balances/std",
    "pallet-nfts/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "sp-runtime/std",
    "sp-staking/std",
    "sp-std/std",
]
try-runtime = [ "frame-support/try-runtime" ]

