[package]
name = "pallet-privileges"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]


[dependencies]
pallet-assets = { workspace = true }
chrono = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-claiming = { workspace = true }
pallet-energy-generation = { workspace = true }
pallet-nac-managing = { workspace = true }
pallet-nfts = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-vesting = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
sp-arithmetic = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-session = { workspace = true }
sp-runtime = { workspace = true }
sp-staking = { workspace = true }
sp-std = { workspace = true }
log = { workspace = true }

frame-benchmarking = { workspace = true, optional = true }

[dev-dependencies]
pallet-assets = { workspace = true }
pallet-authorship = { workspace = true }
pallet-claiming = { workspace = true }
pallet-session = { workspace = true }
parity-scale-codec = { workspace = true }
pallet-balances = { workspace = true }
pallet-reputation = { workspace = true }
pallet-staking-reward-curve = { workspace = true }
pallet-vesting = { workspace = true }
pallet-timestamp = { workspace = true }
rand_chacha = { workspace = true }
sp-tracing = { workspace = true }
libsecp256k1 = "0.7.0"
substrate-test-utils = { workspace = true }

[features]
default = ["std"]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
std = [
    "chrono/std",
    "frame-benchmarking/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-assets/std",
    "pallet-claiming/std",
    "pallet-vesting/std",
    "pallet-reputation/std",
    "pallet-balances/std",
    "pallet-nac-managing/std",
    "pallet-nfts/std",
    "pallet-energy-generation/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "sp-session/std",
    "sp-runtime/std",
    "sp-staking/std",
    "sp-std/std",
]
try-runtime = [ "frame-support/try-runtime" ]

