[package]
name = "pallet-reputation"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
serde = { workspace = true }
libm = { workspace = true }

[dev-dependencies]
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
frame-benchmarking = { workspace = true }

[features]
default = ["std"]
std = [
    "frame-benchmarking?/std",
    "frame-support/std",
    "frame-system/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "serde/std",
    "sp-runtime/std",
    "sp-std/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
