[package]
name = "pallet-simple-staking"
version = "0.1.0"
authors = ["Innowise FinTech Team"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
frame-support = { workspace = true }
frame-system = { workspace = true }
log = { workspace = true }
pallet-authorship = { workspace = true }
pallet-session = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
serde = { workspace = true, optional = true }
sp-application-crypto = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-staking = { workspace = true }
sp-std = { workspace = true }

# Optional imports for benchmarking
frame-benchmarking = { workspace = true, optional = true }
rand_chacha = { workspace = true, optional = true }

[dev-dependencies]
frame-benchmarking = { workspace = true }
pallet-balances = { workspace = true }
pallet-staking-reward-curve = { workspace = true }
pallet-timestamp = { workspace = true }
rand_chacha = { workspace = true }
sp-core = { workspace = true }
sp-tracing = { workspace = true }
substrate-test-utils = { workspace = true }

[features]
default = ["std"]
std = [
    "frame-benchmarking/std",
    "frame-support/std",
    "frame-system/std",
    "log/std",
    "pallet-authorship/std",
    "pallet-balances/std",
    "pallet-session/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "serde",
    "sp-application-crypto/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-staking/std",
    "sp-std/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "rand_chacha",
    "sp-staking/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
