[package]
name = "pallet-simple-vesting"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
frame-support = { workspace = true }
frame-system = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

[dev-dependencies]
pallet-balances = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "pallet-balances/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "sp-core/std",
    "sp-std/std",
    "sp-io/std"
]
try-runtime = ["frame-support/try-runtime"]

