[package]
name = "node-rpc-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpsee = { workspace = true, features = ["server", "macros"] }
serde = { workspace = true, default-features = true }
serde_json = { workspace = true, default-features = true }
