[package]
name = "node-rpc-server"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpsee = { workspace = true, features = ["server", "macros"] }
serde = { workspace = true, default-features = true }
serde_json = { workspace = true, default-features = true }
