[package]
name = "pallet-xcm"
authors.workspace = true
edition.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
bounded-collections = { version = "0.1.8", default-features = false }
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
serde = { workspace = true , optional = true, features = ["derive"] }
log = { workspace = true, default-features = false }

frame-benchmarking = { workspace = true, default-features = false }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }

xcm = { workspace = true, default-features = false }
xcm-executor = { workspace = true, default-features = false }

[dev-dependencies]
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot.git", branch = "release-v1.0.0" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot.git", branch = "release-v1.0.0" }
xcm-builder = { git = "https://github.com/paritytech/polkadot.git", branch = "release-v1.0.0" }

[features]
default = ["std"]
std = [
	"bounded-collections/std",
	"codec/std",
	"scale-info/std",
	"serde",
	"sp-std/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"xcm/std",
	"xcm-executor/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
